--- a/css/style.css
+++ b/css/style.css
@@ -575,6 +575,8 @@ a {
   position: fixed;
   top: 0;
   background: rgba(46, 47, 66, 0.4);
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal {
@@ -589,6 +591,7 @@ a {
   left: 50%;
   transform: translate(-50%, -50%);
   padding: 24px;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-field {
