--- a/css/style.css
+++ b/css/style.css
@@ -614,10 +614,20 @@ a {
   display: flex;
   align-items: center;
   justify-content: center;
+  background-color: #e7e9fc;
+  padding: 0;
+  cursor: pointer;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.modal-close:active {
-  color: #404bbf;
+.icone-close {
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.modal-close:hover .modal-close:focus {
+  background-color: #404bbf;
+  border: none;
 }
 
 .modal-text {
