--- a/css/style.css
+++ b/css/style.css
@@ -621,8 +621,16 @@ a {
     border 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
-.icone-close {
+.icon-close {
   transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+
+.icon-close:hover {
+  fill: #ffffff;
+}
+
+.icone-close:focus {
+  fill: #ffffff;
 }
 
 .modal-close:hover {
@@ -641,7 +649,7 @@ a {
   font-family: Roboto;
   font-size: 16px;
   font-weight: 500;
-  line-height: 1.5px;
+  line-height: 1.5;
   letter-spacing: 0.02em;
   width: 360px;
   height: 24px;
@@ -685,7 +693,7 @@ a {
   color: #8e8f99;
   font-size: 12px;
   font-weight: 400;
-  line-height: 1.17px;
+  line-height: 1.17;
   letter-spacing: 0.04em;
 }
 
