--- a/css/style.css
+++ b/css/style.css
@@ -685,6 +685,10 @@ a {
   box-shadow: 0px 4px 4px 0px rgba(0, 0, 0, 0.15);
 }
 
+.modal-btn :hover {
+  background-color: #404bbf;
+}
+
 .form-label {
   display: block;
   width: 34px;
@@ -707,4 +711,24 @@ a {
 
 .modal-icon-wrap {
   position: relative;
+}
+
+.modal-comment {
+  width: 360px;
+  height: 120px;
+  border-radius: 4px;
+  background-color: transparent;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+}
+
+.from-comment {
+  display: block;
+  width: 56px;
+  height: 14px;
+  color: #8e8f99;
+  font-size: 12px;
+  font-weight: 400;
+  line-height: 1.17;
+  letter-spacing: 0.04em;
+  margin-bottom: 4px;
 }
