--- a/css/style.css
+++ b/css/style.css
@@ -590,7 +590,7 @@ a {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  padding: 24px;
+  padding: 72px 24px 24px 24px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
@@ -662,9 +662,12 @@ a {
   width: 100%;
   height: 40px;
   border-radius: 4px;
+  outline: transparent;
   background-color: transparent;
   border: 1px solid rgba(46, 47, 66, 0.4);
   margin-bottom: 8px;
+  padding-left: 38px;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-input:focus {
@@ -707,6 +710,7 @@ a {
   top: 50%;
   transform: translateY(-50%);
   flex-shrink: 0;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .modal-icon-wrap {
