--- a/css/style.css
+++ b/css/style.css
@@ -728,14 +728,21 @@ a {
   border: 1px solid rgba(46, 47, 66, 0.4);
 }
 
-.from-comment {
-  display: block;
-  width: 56px;
-  height: 14px;
-  color: #8e8f99;
+.modal-field-comment {
+  margin-bottom: 16px;
+}
+
+.area-text {
+  width: 100%;
+  height: 120px;
   font-size: 12px;
-  font-weight: 400;
   line-height: 1.17;
   letter-spacing: 0.04em;
-  margin-bottom: 4px;
+  color: rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  background-color: transparent;
+  padding: 8px 16px;
+  outline: transparent;
+  resize: none;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
