--- a/css/style.css
+++ b/css/style.css
@@ -600,7 +600,6 @@ a {
   transform: translate(-50%, -50%);
   padding: 72px 24px 24px 24px;
   transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
-
 }
 
 .modal-field {
@@ -688,19 +687,22 @@ a {
 }
 
 .modal-btn {
- display: block;
- min-width: 169px;
-height: 56px;
-font-size: 16px;
-font-weight: 500;
-line-height: 1.5;
-letter-spacing: 0.04em;
-color: #ffffff;
-cursor: pointer;
-background-color: #4D5AE5;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
-border-radius: 4px;
-box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.20);
+  display: block;
+  min-width: 169px;
+  height: 56px;
+  font-size: 16px;
+  font-weight: 500;
+  line-height: 1.5;
+  letter-spacing: 0.04em;
+  color: #ffffff;
+  cursor: pointer;
+  background-color: #4d5ae5;
+  transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  border-radius: 4px;
+  box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14),
+    0px 1px 3px 0px rgba(0, 0, 0, 0.12), 0px 2px 1px 0px rgba(0, 0, 0, 0.2);
+  border: none;
+  margin: 0 auto;
 }
 
 .modal-btn :hover {
@@ -787,14 +789,37 @@ box-shadow: 0px 1px 1px 0px rgba(0, 0, 0, 0.14), 0px 1px 3px 0px rgba(0, 0, 0, 0
   letter-spacing: 0.04em;
 }
 
-.checkbox-icon {
+.checkbox-label span {
   width: 16px;
   height: 16px;
   border: 1px solid rgba(46, 47, 66, 0.4);
   border-radius: 2px;
-  background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
   display: inline-flex;
   align-items: center;
   justify-content: center;
-   fill: transparent;
+  fill: transparent;
+  margin-right: 8px;
+}
+
+.checkbox-svg {
+}
+
+.checkbox-policy {
+  color: #4d5ae5;
+  text-decoration-line: underline;
+  font-size: 12px;
+  line-height: 1.3;
+}
+
+.checkbox-input:checked + .checkbox-label span {
+  background-color: #404bbf;
+  border: none;
+  fill: #ffffff;
+}
+
+.checkbox-policy {
+  color: #4d5ae5;
 }
