--- a/css/style.css
+++ b/css/style.css
@@ -804,7 +804,10 @@ a {
   margin-right: 8px;
 }
 
-.checkbox-svg {
+.checkbox-icon {
+  background-color: 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    border 250ms cubic-bezier(0.4, 0, 0.2, 1),
+    fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
 
 .checkbox-policy {
@@ -817,7 +820,7 @@ a {
 .checkbox-input:checked + .checkbox-label span {
   background-color: #404bbf;
   border: none;
-  fill: #ffffff;
+  fill: #f4f4fd;
 }
 
 .checkbox-policy {
